style/format.css
/* Spanish-Rose: #882D6A; */
/* Green: #8FBF59; */

/* General Settings */
@font-face {
	font-family: 'Josefin-Sans';
	src: url('../font/JosefinSans-Light.eot?#iefix') format('embedded-opentype');
	src: url('../font/JosefinSans-Light.ttf') format("truetype");
	src: url('../font/JosefinSans-Light.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Josefin-Sans';
	src: url('../font/JosefinSans-Regular.eot?#iefix') format('embedded-opentype');
	src: url('../font/JosefinSans-Regular.ttf') format("truetype");
	src: url('../font/JosefinSans-Regular.woff') format('woff');
	font-weight: bold;
	font-style: normal;
}

* {
	margin: 0;
	padding: 0;
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	   		box-sizing: border-box;
	font-family: 'Josefin-Sans', sans-serif;
}

/* ==============================================
   Navigation element, default browser experience 
   ==============================================*/

/* low width */
@media screen and (min-width: 1px) and (max-width: 899px) {
	.navigation {
		overflow: auto;
		text-align: center;
		border-bottom-width: 5px;
		border-bottom-color: #882D6A;
		border-bottom-style: solid;
	}

	.navigation img {
		max-width: 25%;
		min-width: 150px;
		min-height: 75px;
		height: auto;
		width: auto\9;	/*i8 fix*/
		margin: 0 auto;
	}

	.navigation ul {
		padding-top: 10px;
	}

	.navigation li {
		border-top-width: 5px;
		border-top-color: #882D6A;
		border-top-style: solid;
		padding-top: 0.25em;
		padding-bottom: 0.25em;
		font-size: 1.2em;
	}
}

/* medium screens */
@media screen and (min-width: 900px) and (max-width: 1299px) {
	.navigation {
		overflow: auto;
		text-align: center;
	}

	.navigation img {
		max-width: 25%;
		min-width: 220px;
		min-height: 110px;
		height: auto;
		width: auto\9;	/*i8 fix*/
		margin: 0 auto;
	}

	.navigation ul {
		padding-top: 10px;

		border-bottom-width: 0.6cm;
		border-bottom-style: solid;
		border-color: #882D6A;
		padding-bottom: 5px;
		font-size: 1.3em;
	}

	.navigation li {
		display: inline;
		margin-left: 0.5em;
		margin-right: 0.5em;
		font-size: 20px;
	}
}

/* large screens */
@media screen and (min-width: 1300px) {
	.navigation {
		overflow: auto;
		margin-top: 10px;
		margin-left: auto;
		margin-right: auto;
		width: 1300px;
	}

	.navigation img {
		width: 220px;
		height: 110px;
		float: left;
	}

	.navigation ul {
		padding-top: 50px;
		float: left;

		font-size: 1.2em;

		border-bottom-width: 0.6cm;
		border-bottom-style: solid;
		border-color: #882D6A;
		padding-bottom: 5px;
	}

	.navigation li {
		display: inline;
		margin-left: 1.5em;
		font-size: 1.2em;
	}
}

.navigation a {
	text-decoration: none;
	font-family: 'Josefin Sans';
}

.navigation a:link {
	color: gray;
	transition: color 0.3s;
}

.navigation a:visited {
	color: gray;
}

.navigation a:hover {
	color: #8FBF59;
	transition: color 0.3s;
}

.navigation a:active {
	color: black;
}

